Fix broken layout with word-break

--- a/components/atoms/Body.module.css
+++ b/components/atoms/Body.module.css
@@ -1,3 +1,7 @@
+.postBody p {
+  word-break: break-all;
+}
+
 .postBody a {
   cursor: pointer;
   color: #0070f3;
